Refine partner/funder layouts and hero funded block

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@riedel-wtf/one-sec-ui": "file:vendor/one-sec-ui",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "i18next": "^25.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
